cicd/manifests/apps/web-example/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: web-example
  labels:
    app: web-example
    istio-injection: enabled
