cicd/manifests/apps/web-example/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-example
  namespace: web-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-example
  template:
    metadata:
      labels:
        app: web-example
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
          livenessProbe:
            httpGet:
              path: /
              port: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
