cicd/manifests/apps/web-example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-example
  namespace: web-example
spec:
  selector:
    app: web-example
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
  type: ClusterIP
